--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ header{
 	height: 100vh;
 	background-size: cover;
   	background-position: center;
+  	position: absolute;
 }
 
 ul{
@@ -27,7 +28,7 @@ ul li a{
 	text-decoration: none;
 	color: #fff;
 	padding: 10px 50px;
-	border: 3px solid transparent;
+	border: 3% solid transparent;
 	transition: 0.5s ease;
 	margin: 5px;
 	font-weight: bold;
@@ -45,10 +46,15 @@ ul li.active a{
 }
 
 .logo img{
-	float: left;
+	/*float: left;*/
 	width: 200px;
-    padding-top: 270px;
-    padding-left: 860px;
+ /*   padding-top: 15%;
+    padding-left: 45%;
+    size: 50%,50%;*/
+    position: absolute;
+	top: 40%; 
+	left: 50%;
+	transform: translate(-50%,-50%);
 }
 
 .title{
@@ -85,3 +91,7 @@ ul li.active a{
 	background-color: #23DE17;
 	color: white;
 }
+
+/*.main{
+	padding-right: 20px;
+}*/
