--- a/about.css
+++ b/about.css
@@ -1,6 +1,14 @@
+
+*{
+	margin: 0;
+	padding: 0;
+	font-family: Century Gothic;
+}
+
+
 #myDIV {
   max-width: 100%;
-  height: 1700px;
+  height: 1900px;
   background: transparent;
   animation: mymove 2s infinite;
 }
@@ -15,7 +23,7 @@
 ul{
 /*	float: right;*/
 	list-style-type: none;
-	margin-top: -1650px;
+	margin-top: -1850px;
 	margin-right: 15px;
 	
 }
@@ -70,14 +78,14 @@ ul li.active a{
 	height: 100%;
 }*/
 
-/*.border{
-	display: block;
+.border{
+/*	display: block;*/
 	margin: auto;
 	width: 160px;
 	height: 3px
 	background: #3498db;
 	margin-bottom: 40px;
-}*/
+}
 .ps{
 	margin-bottom: 100px;
 }
@@ -105,18 +113,26 @@ ul li.active a{
 /*.section:target{
 height: 40px; 
 }*/
+
+  /*about page heading muhammed nizam style*/
+
 .name{
-	display: block;
-	margin-bottom: 30px;
+	/*display: block;*/
+	margin-bottom: 15px;
 	text-align: center;
 	text-transform: uppercase;
-	font-size: 30px;
+	font-family: "Sofia";
+    font-size: 60px;
+    font-weight: bold;
 }
+
+  /*about page under photo line adjustment*/
+
 hr{
-	width: 250px;
+	width: 1300px;
 	  margin-left: auto;
 	  margin-right: auto;
-	  margin-bottom: 100px;
+	  margin-bottom: 50px;
 
 }
 .yoyo{
@@ -149,4 +165,15 @@ ul li a:hover{
 	background-color: lightgreen;
 	color: black;
 	border: 4px black;
+}
+
+.para{
+	font-family: Century Gothic;
+    font-size: 25px;
+    color: white;
+}
+
+.qoute{
+	color: white;
+	font-weight: bold;
 }
