--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
 }
 
 .banner{
-	background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(2880x1620_neon-ring-sci-fi-huawei-mediapad-m6-stock.jpg);
+	background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(mom.png);
 	height: 100vh;
 	background-size: cover;
   	background-position: center;
