--- a/about.css
+++ b/about.css
@@ -1,179 +1,152 @@
+		
+body{
+     background: #282828;
+     font-family: tahoma;
+     text-align: justify;
+     overflow: hidden;
+			
+}	
 
-*{
-	margin: 0;
-	padding: 0;
-	font-family: Century Gothic;
+
+
+.color-3{
+     color: #d6c6b2;
+}
+		
+		
+.text-white{
+	 color: white;
+}
+		
+		
+p{
+	margin-bottom: 0;
+	font-size: 16px;
+	line-height: 24px;
+	color: #d6c6b2;b
 }
 
-
-#myDIV {
-  max-width: 100%;
-  height: 1900px;
-  background: transparent;
-  animation: mymove 2s infinite;
+#about{
+	padding-top: 98px;
+	padding-bottom: 101px;
 }
-
-@keyframes mymove {
-  from {background-color: red;}
-  to {background-color: blue;}
-}
-
-
-
-ul{
-/*	float: right;*/
-	list-style-type: none;
-	margin-top: -1850px;
-	margin-right: 15px;
-	
-}
-
-ul li{
-	display: inline-block;
-}
-
-ul li a{
-	text-decoration: none;
-	color: #fff;
-	padding: 10px 50px;
-	border: 8px solid black;
-	transition: 0.5s ease;
-	margin: 5px;
-	font-weight: bold;
-	font-family: Century Gothic;
-}
-
-ul li a:hover{
-	background-color: red;
-	color: #000;
-}
-
-ul li.active a{
-	background-color: white;
-	color: black;
-}
-
-
-
-
-
-*{
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
-}
-.main{
-	text-align: center;
-	padding: 60px;
-}
-.main h1{
-	text-transform: uppercase;
-	margin-bottom: 60px;
-	color: white;
-	font-size: 50px;
-}
-
-/*.inside_box{
-	text-align: center;
-	height: 100%;
-}*/
-
-.border{
-/*	display: block;*/
-	margin: auto;
-	width: 160px;
-	height: 3px
-	background: #3498db;
-	margin-bottom: 40px;
-}
-.ps{
-	margin-bottom: 100px;
-}
-/*.ps a{
-	display: inline-block;
-	margin: 50px 30px 40px 0px;
-	height : 150px;
-	overflow: hidden;
-}*/
-.ps a img{
-	filter: grayscale(100%);
-	transition: 0.4s all;
-}
-.ps a:hover > img{
-	filter:none;
-}
-.section{
-/*	width: 10px;
-*/	font-size: 60px;
-	color : white;
-	text-align: center; 
+	 
+#about .triangle-right{
+	margin-top: 95px;
+	width: 0;
 	height: 0;
-	overflow: hidden;
+	border-top: 259px solid transparent;
+	border-left: 470px solid #d6c6b2;
+	border-bottom: 259px solid transparent;
+			
+			
 }
-/*.section:target{
-height: 40px; 
-}*/
-
-  /*about page heading muhammed nizam style*/
-
-.name{
-	/*display: block;*/
-	margin-bottom: 15px;
+	 
+#about .triangle-right img{
+	position: absolute;
+	left: -1px;
+	top: 81px;
+	width: 74%;
+		 
+		}
+	 
+.fa-play{
+	font-size: 100px;
+			
+}
+		
+		
+#about .p-first{
+			margin-bottom: 30px;
+}
+		
+		
+#about h2{
+	margin-bottom: 47px;
+	margin-top: 12px;
+			
+		}
+		
+		
+#about .social-link-text{
+	margin-top: 50px;
+	margin-bottom: 25px;			
+			
+		}
+		
+#about .about-link{
+	padding-left: 0px;
+		}
+		
+#about .about-link li{
+	display: inline-block;
+		}
+		
+#about .about-link li a i{
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	line-height: 50px;
 	text-align: center;
-	text-transform: uppercase;
-	font-family: "Sofia";
-    font-size: 60px;
+	border: 1px solid #d6c6b2;
+	margin-right: 10px;
+	font-size: 22px;
+	color: #d6c6b2;
+	transition: all .3s;
+			
+		}
+		
+		
+#about .about-link li a i:hover{
+	color: #222222;
+	background: #d6c6b2;
+	border-color: #d6c6b2;
+			
+		}
+	 
+		
+#about .about-img{
+	position: relative;
+			
+		}
+		
+#about .about-img{
+	position: relative;
+			
+		}
+		
+#about .about-img .man{
+	position: absolute;
+	bottom: 161px;
+	top: -5%;
+	left: -10%;
+			
+}
+	
+/*.btn-danger{
+	border-radius: 0;
+	padding: 10px 20px;
+}*/
+		
+.button{
+	position: absolute;
+	top: 80%; 
+	left: 14%;
+	transform: translate(-50%,-50%);
+}
+
+.btn{
+	border: 4px solid white;
+	padding: -5px 10px;
+	color: white;
+	text-decoration: none;
+    transition: 0.6s ease;
+    font-size: 20px;
     font-weight: bold;
 }
 
-  /*about page under photo line adjustment*/
-
-hr{
-	width: 1300px;
-	  margin-left: auto;
-	  margin-right: auto;
-	  margin-bottom: 50px;
-
-}
-.yoyo{
-	float: right;
-	padding-right: 100px;
-}
-/*
-ul{
-	float: right;
-	list-style-type: none;
-	 
-}*/
-
-ul li{
-	display: inline-block;
-	padding-left: 1700px;
-}
-
-ul li a{
-	text-decoration: none;
-	color: white;
-	padding: 3px 3px;
-	border: 4px solid white;
-	transition : 0.6s ease;
-	font-size: 150%;
-	border-radius: 10%;
-}
-
-ul li a:hover{	
-	background-color: lightgreen;
+.btn:hover{
+	background-color: #23DE17;
 	color: black;
-	border: 4px black;
 }
-
-.para{
-	font-family: Century Gothic;
-    font-size: 25px;
-    color: white;
-}
-
-.qoute{
-	color: white;
-	font-weight: bold;
-}
+		
