--- a/about.css
+++ b/about.css
@@ -122,11 +122,6 @@ p{
 	left: -10%;
 			
 }
-	
-/*.btn-danger{
-	border-radius: 0;
-	padding: 10px 20px;
-}*/
 		
 .button{
 	position: absolute;
@@ -150,3 +145,24 @@ p{
 	color: black;
 }
 		
+.click{
+    position: absolute;
+	top: 10%; 
+	left: 95%;
+	transform: translate(-50%,-50%);
+}
+
+.clk{
+    border: 4px solid white;
+	padding: 10px 10px;
+	color: white;
+	text-decoration: none;
+    transition: 0.6s ease;
+    font-size: 25px;
+    font-weight: bold;
+} 
+
+.clk:hover{
+	background-color: red;
+	color: black;
+}
