--- a/myvideos.css
+++ b/myvideos.css
@@ -1,232 +1,91 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: Century Gothic;
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  margin-left: -10px;
 }
 
-body{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 30px;
+  width: 100%;
+  font-weight: bold;
 }
 
-.heading{
-	position: absolute;
-	top: 10%; 
-	left: 52%;
-	transform: translate(-50%,-50%);
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-.heading h1{
-	color: white;
-	font-size: 100px;
-    
+.topnav a.active {
+  background-color: #CBCBCB;
+  color: white;
 }
 
-
-.button{
-	position: absolute;
-	top: 6%; 
-	right: -3%;
-	transform: translate(-50%,-50%);
+.video{
+  margin-left: 1.5%;
+  margin-right:1.5%;
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
 
-.btn{
-	border: 9px solid white;
-	padding: 10px 40px;
-	color: white;
-	text-decoration: none;
-    transition: 0.6s ease;
-    font-size: 25px;
-    font-weight: bold;
+.body {
+  font-family: "Sofia";
+  font-size: 22px;
 }
 
-.btn:hover{
-	background-color: #23DE17;
-	color: white;
+/*.marque{
+  font-size: 40px;
+}*/
+
+.marque {
+  font-family: Comic Sans MS;
+  font-style: italic;
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+  color: #313131;
+  font-size: 45px;
+  font-weight: bold;
+  position: absolute;
+  -webkit-animation: colorchange 3s infinite alternate;
 }
 
-.imgBx{
-	margin-top: -40%;
-	margin-left: 10%;
-
-}
-
-.odometer{
-	font-size: 3em;
-    position: center;
-}
-
-.a img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 90%; 
-	left: 13%;
-	transform: translate(-50%,-50%);
-
-}
-
-
-.b img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 90%; 
-	left: 38%;
-	transform: translate(-50%,-50%);
-}
-
-.c img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 90%; 
-	left: 63%;
-	transform: translate(-50%,-50%);
-}
-
-.d img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 90%; 
-	left: 88%;
-	transform: translate(-50%,-50%);
-}
-
-
-.e img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 110%; 
-	left: 13%;
-	transform: translate(-50%,-50%);
-
-}
-
-
-.f img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 110%; 
-	left: 38%;
-	transform: translate(-50%,-50%);
-}
-
-.g img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 110%; 
-	left: 63%;
-	transform: translate(-50%,-50%);
-}
-
-.h img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 110%; 
-	left: 88%;
-	transform: translate(-50%,-50%);
-}
-
-.i img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 130%; 
-	left: 13%;
-	transform: translate(-50%,-50%);
-
-}
-
-
-.j img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 130%; 
-	left: 38%;
-	transform: translate(-50%,-50%);
-}
-
-.k img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 130%; 
-	left: 63%;
-	transform: translate(-50%,-50%);
-}
-
-.l img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 130%; 
-	left: 88%;
-	transform: translate(-50%,-50%);
-}
-
-.m img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 150%; 
-	left: 13%;
-	margin-bottom: 100px;
-	transform: translate(-50%,-50%);
-
-}
-
-
-.n img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 150%; 
-	left: 38%;
-	margin-bottom: 100px;
-	transform: translate(-50%,-50%);
-}
-
-.o img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 150%; 
-	left: 63%;
-	margin-bottom: 100px;
-	transform: translate(-50%,-50%);
-}
-
-.p img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 150%; 
-	left: 88%;
-	margin-bottom: 100px;
-	transform: translate(-50%,-50%);
+@-webkit-keyframes colorchange {
+  0% {
+    color: blue;
+  }
+  10% {
+    color: #8e44ad;
+  }
+  20% {
+    color: #1abc9c;
+  }
+  30% {
+    color: #d35400;
+  }
+  40% {
+    color: blue;
+  }
+  50% {
+    color: #34495e;
+  }
+  60% {
+    color: blue;
+  }
+  70% {
+    color: #2980b9;
+  }
+  80% {
+    color: #f1c40f;
+  }
+  90% {
+    color: #2980b9;
+  }
+  100% {
+    color: pink;
+  }
 }
