--- a/about.css
+++ b/about.css
@@ -135,9 +135,9 @@ p{
 	padding: -5px 10px;
 	color: white;
 	text-decoration: none;
-    transition: 0.6s ease;
-    font-size: 20px;
-    font-weight: bold;
+        transition: 0.6s ease;
+        font-size: 20px;
+        font-weight: bold;
 }
 
 .btn:hover{
@@ -146,20 +146,21 @@ p{
 }
 		
 .click{
-    position: absolute;
+        position: absolute;
 	top: 10%; 
 	left: 95%;
 	transform: translate(-50%,-50%);
 }
 
 .clk{
-    border: 4px solid white;
-	padding: 10px 10px;
+        border: 4px solid white;
+	padding: 5px 10px;
 	color: white;
 	text-decoration: none;
-    transition: 0.6s ease;
-    font-size: 25px;
-    font-weight: bold;
+        transition: 0.6s ease;
+        font-size: 25px;
+        font-weight: bold;
+	border-radius: 10%;
 } 
 
 .clk:hover{
