--- a/livesubcount.css
+++ b/livesubcount.css
@@ -230,3 +230,36 @@ body{
 	margin-bottom: 100px;
 	transform: translate(-50%,-50%);
 }
+
+.q img{
+	width: 200px;
+	height: 100px;
+	border-radius: 10%;
+    position: absolute;
+	top: 170%; 
+	left: 13%;
+	margin-bottom: 100px;
+	transform: translate(-50%,-50%);
+}
+
+.r img{
+	width: 200px;
+	height: 100px;
+	border-radius: 10%;
+    position: absolute;
+	top: 170%; 
+	left: 38%;
+	margin-bottom: 100px;
+	transform: translate(-50%,-50%);
+}
+
+.s img{
+	width: 200px;
+	height: 100px;
+	border-radius: 10%;
+    position: absolute;
+	top: 170%; 
+	left: 63%;
+	margin-bottom: 100px;
+	transform: translate(-50%,-50%);
+}
