--- a/explore.css
+++ b/explore.css
@@ -1,265 +1,74 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: Century Gothic;
+body,html{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
-
 body{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
+  background: url(wallpapersden.com_abstract-color-stroke_1920x1080.jpg) 50% 50%;
+  background-size: cover;
+  font-family: "Montserrat",sans-serif;
 }
-
-.heading{
-	position: absolute;
-	top: 10%; 
-	left: 52%;
-	transform: translate(-50%,-50%);
+.container{
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+  color: white;
 }
-
-.heading h1{
-	color: white;
-	font-size: 100px;
-    
+.container h1{
+  text-transform: uppercase;
+  font-size: 70px;
+  margin: 0px;
+  letter-spacing: 10px;
 }
-
+.container h2{
+  margin: 0;
+  font-size: 14px;
+  font-weight: 500;
+  font-style: italic;
+}
+.count{
+  margin: 40px 0;
+}
+.countd{
+  display: inline-block;
+  width: 90px;
+  height: 90px;
+  border: 5px solid;
+  margin: 0 30px;
+  font-size: 15px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.countd span{
+  display: block;
+  font-size: 26px;
+  margin-top: 14px;
+}
 
 .button{
-	position: absolute;
-	top: 6%; 
-	right: -3%;
-	transform: translate(-50%,-50%);
+  position: absolute;
+  top: 5%; 
+  left: 94%;
+  transform: translate(-50%,-50%);
 }
 
 .btn{
-	border: 9px solid white;
-	padding: 10px 40px;
-	color: white;
-	text-decoration: none;
-    transition: 0.6s ease;
-    font-size: 25px;
-    font-weight: bold;
+  border: 7px solid white;
+  padding: 5px 20px;
+  color: white;
+  text-decoration: none;
+  transition: 0.6s ease;
+  font-size: 20px;
+  font-weight: bolder;
+  border-radius: 10%;
+  background-color: transparent;
 }
 
 .btn:hover{
-	background-color: #23DE17;
-	color: white;
-}
-
-.imgBx{
-	margin-top: -40%;
-	margin-left: 10%;
-
-}
-
-.odometer{
-	font-size: 3em;
-    position: center;
-}
-
-.a img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 90%; 
-	left: 13%;
-	transform: translate(-50%,-50%);
-
-}
-
-
-.b img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 90%; 
-	left: 38%;
-	transform: translate(-50%,-50%);
-}
-
-.c img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 90%; 
-	left: 63%;
-	transform: translate(-50%,-50%);
-}
-
-.d img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 90%; 
-	left: 88%;
-	transform: translate(-50%,-50%);
-}
-
-
-.e img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 110%; 
-	left: 13%;
-	transform: translate(-50%,-50%);
-
-}
-
-
-.f img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 110%; 
-	left: 38%;
-	transform: translate(-50%,-50%);
-}
-
-.g img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 110%; 
-	left: 63%;
-	transform: translate(-50%,-50%);
-}
-
-.h img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 110%; 
-	left: 88%;
-	transform: translate(-50%,-50%);
-}
-
-.i img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 130%; 
-	left: 13%;
-	transform: translate(-50%,-50%);
-
-}
-
-
-.j img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 130%; 
-	left: 38%;
-	transform: translate(-50%,-50%);
-}
-
-.k img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 130%; 
-	left: 63%;
-	transform: translate(-50%,-50%);
-}
-
-.l img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 130%; 
-	left: 88%;
-	transform: translate(-50%,-50%);
-}
-
-.m img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 150%; 
-	left: 13%;
-	margin-bottom: 100px;
-	transform: translate(-50%,-50%);
-
-}
-
-
-.n img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 150%; 
-	left: 38%;
-	margin-bottom: 100px;
-	transform: translate(-50%,-50%);
-}
-
-.o img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 150%; 
-	left: 63%;
-	margin-bottom: 100px;
-	transform: translate(-50%,-50%);
-}
-
-.p img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 150%; 
-	left: 88%;
-	margin-bottom: 100px;
-	transform: translate(-50%,-50%);
-}
-
-.q img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 170%; 
-	left: 13%;
-	margin-bottom: 100px;
-	transform: translate(-50%,-50%);
-}
-
-.r img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 170%; 
-	left: 38%;
-	margin-bottom: 100px;
-	transform: translate(-50%,-50%);
-}
-
-.s img{
-	width: 200px;
-	height: 100px;
-	border-radius: 10%;
-    position: absolute;
-	top: 170%; 
-	left: 63%;
-	margin-bottom: 100px;
-	transform: translate(-50%,-50%);
+  background-color: #23DE17;
+  color: white;
 }
