--- a/style.css
+++ b/style.css
@@ -1,3 +1,88 @@
+
+/*
+header{
+	background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(2880x1620_neon-ring-sci-fi-huawei-mediapad-m6-stock.jpg);
+	height: 100vh;
+	background-size: cover;
+  	background-position: center;
+  	
+}
+
+ul{
+	float: right;
+	list-style-type: none;
+    margin-top: 2%;
+    margin-right: 1%;
+}
+
+ul li{
+	display: inline-block;
+}
+
+ul li a{
+	text-decoration: none;
+	color: #fff;
+	padding: 10px 50px;
+	border: 3% solid transparent;
+	transition: 0.5s ease;
+	margin: 5px;
+	font-weight: bold;
+}
+
+ul li a:hover{
+	background-color: #fff;
+	color: #000;
+	font-weight: bold;
+}
+ul li.active a{
+	background-color: #fff;
+	color: #000;
+	font-weight: bold;
+}
+*/
+/*.logo img{
+	float: left;
+	width: 200px;
+    padding-top: 15%;
+    padding-left: 45%;
+    size: 50%,50%;
+    position: absolute;
+	top: 40%; 
+	left: 50%;
+	transform: translate(-50%,-50%);
+}*/
+
+
+/*.button{
+	position: absolute;
+	top: 85%; 
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+
+.btn{
+	border: 9px solid white;
+	padding: 10px 40px;
+	color: white;
+	text-decoration: none;
+    transition: 0.6s ease;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.btn:hover{
+	background-color: #23DE17;
+	color: white;
+}
+
+.main{
+	padding-right: 20px;
+}*/
+
+
+
+
+
 *{
 	margin: 0;
 	padding: 0;
@@ -100,5 +185,27 @@ ul li.active a{
 .btn:hover{
 	background-color: #23DE17;
 	color: white;
+}
+
+.click{
+	position: absolute;
+	top: 4.7%; 
+	left: 60%;
+	transform: translate(-50%,-50%);
+}
+
+.clk{
+	padding: 10px 40px;
+	color: white;
+	text-decoration: none;
+    transition: 0.6s ease;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 5%;
+}
+
+.clk:hover{
+	background-color: white;
+	color: black;
 }
 
